--- a/configuration.properties
+++ b/configuration.properties
@@ -1,13 +1,100 @@
 browser=chrome
 url=http://root:neural001@192.168.1.217/VPARD/www/index.html
 zkto=http://192.168.1.90
-urlaxis=http://root:neural001@192.168.1.175/:8090/index.html
+urlaxis=http://root:neural001@192.168.1.136:8090/index.html
 urlfullVivotek=http://root:neural001@192.168.1.63/VPARD/www/logs.html
 viconApi=http://192.168.1.185/
 zkotechpassword=neural001
+camera_name=root
+password=neural001
 vicon_username=ADMIN
-vicon_password=Neural001+
-voucher_id=NEWS-GB213QL41
+vicon_password1=Neural001+
 vicon_full_url=http://ADMIN:Neural001+@192.168.1.185/lpr/
 vivotekauditfullurl=http://root:neural001@192.168.1.215/VPARD/www/historic.html
 vivotekgeneralconfigfullurl=http://root:neural001@192.168.1.215/VPARD/www/configuration.html
+
+# Vivotek Cameras ip
+vivotek_cv25_113=192.168.1.113
+vivotek_cv25_91=192.168.1.91
+vivotek_ib9365_ht_a=192.168.1.217
+vivotek_ib9387_ht=192.168.1.82
+vivotek_ip9165_lpc=192.168.1.58
+vivotek_fd9387_htv_a=192.168.1.97
+vivotek_ib9387_lpr_v2=192.168.1.98
+
+# Name password config
+user_password=root:neural001@
+vicon_user_password=ADMIN:Neural001+@
+
+
+#Vicon Cameras ip
+vicon_v200=192.168.1.185
+
+#Axis Cameras ip
+axis_p1375_e=192.168.1.175
+
+#Vivotek URL
+vivo_live_url=/VPARD/www/index.html
+vivo_review_url=/VPARD/www/review.html
+vivo_list_url=/VPARD/www/lists.html
+vivo_lprconfig_url=/VPARD/www/camconfiguration.html
+vivo_evidence_url=/VPARD/www/evidence.html
+vivo_genconfig_url=/VPARD/www/configuration.html
+vivo_audit_url=/VPARD/www/historic.html
+vivo_logs_url=/VPARD/www/logs.html
+
+#Vicon URL
+vic_live_url=/lpr/
+vic_review_url=/lpr/review.html
+vic_list_url=/lpr/lists.html
+vic_lprconfig_url=/lpr/camconfiguration.html
+vic_evidence_url=/lpr/evidence.html
+vic_generalconfig_url=/lpr/configuration.html
+vic_audit_url=/lpr/historic.html
+vic_logs=/lpr/logs.html
+
+#Axis URL
+axis_live_url=:8090/index.html
+axis_review_url=:8090/review.html
+axis_list_url=:8090/lists.html
+axis_lprconfig_url=:8090/camconfiguration.html
+axis_evidence_url=:8090/evidence.html
+axis_genconfig_url=:8090/configuration.html
+axis_audit_url=:8090/historic.html
+axis_logs_url=:8090/logs.html
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
