--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,6 @@
 browser=chrome
 url=http://root:neural001@192.168.1.217/VPARD/www/index.html
+zktecofull=http://admin:neural001@192.168.1.86
 
 zkto=http://192.168.1.90
 urlaxis=http://root:neural001@192.168.1.136:8090/index.html
