--- a/configuration.properties
+++ b/configuration.properties
@@ -20,6 +20,7 @@ vivotek_cv25_113=192.168.1.113
 vivotek_cv25_91=192.168.1.91
 vivotek_ib9365_ht_a=192.168.1.217
 vivotek_ib9387_ht=192.168.1.82
+vivotek_IB9387-lpr=192.168.1.88
 vivotek_ip9165_lpc=192.168.1.58
 vivotek_fd9387_htv_a=192.168.1.97
 vivotek_ib9387_lpr_v2=192.168.1.98
