--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,6 @@
 browser=chrome
 url=http://root:neural001@192.168.1.217/VPARD/www/index.html
 zktecofull=http://admin:neural001@192.168.1.86
-
 zkto=http://192.168.1.90
 urlaxis=http://root:neural001@192.168.1.136:8090/index.html
 urlfullVivotek=http://root:neural001@192.168.1.63/VPARD/www/logs.html
@@ -28,11 +27,8 @@ vivotek_ib9387_lpr_v2=192.168.1.98
 # Name password config
 user_password=root:neural001@
 vicon_user_password=ADMIN:Neural001+@
-
-
 #Vicon Cameras ip
 vicon_v200=192.168.1.185
-
 #Axis Cameras ip
 axis_p1375_e=192.168.1.175
 
@@ -66,7 +62,11 @@ axis_genconfig_url=:8090/configuration.html
 axis_audit_url=:8090/historic.html
 axis_logs_url=:8090/logs.html
 
-
+#ftp configure
+ftp_post=192.168.1.169
+ftp_folder_name=tmp/filezilla/test
+ftp_user=cihan
+ftp_password=neural001
 
 
 
