--- a/configuration.properties
+++ b/configuration.properties
@@ -17,6 +17,7 @@ vivotekgeneralconfigfullurl=http://root:neural001@192.168.1.215/VPARD/www/config
 # Vivotek Cameras ip
 vivotek_cv25_113=192.168.1.113
 vivotek_cv25_91=192.168.1.91
+vivotek_cv25_81=192.168.1.81
 vivotek_ib9365_ht_a=192.168.1.217
 vivotek_ib9387_ht=192.168.1.82
 vivotek_IB9387-lpr=192.168.1.88
