new_scenario_outline

--- a/configuration.properties
+++ b/configuration.properties
@@ -45,6 +45,7 @@ vivo_logs_url=/VPARD/www/logs.html
 
 #Vicon URL
 vic_live_url=/lpr/index.html
+vic_url=/lpr/
 vic_review_url=/lpr/review.html
 vic_list_url=/lpr/lists.html
 vic_lprconfig_url=/lpr/camconfiguration.html
